--- a/src/wwt_stuff/index.html
+++ b/src/wwt_stuff/index.html
@@ -118,7 +118,7 @@
     </style>
   </head>
   <body>
-    <!-- <div class="BigContain"> -->
+    <!-- <div class="BigContain"> bleh-->
       <!-- <div class="Ducky">Ducky!</div> -->
       <div class="chat-container">
         ~~~~~~~~~~~~~~~~~~~~~~~~~ Ducky! ~~~~~~~~~~~~~~~~~~~~~~~~~
