--- a/src/wwt_stuff/index.html
+++ b/src/wwt_stuff/index.html
@@ -20,6 +20,8 @@
         height: 100vh;
         /* background-color: #737373; */
         background-image: url("bg.png");
+        background-repeat:no-repeat;
+        background-size: cover;
         margin: 0;
       }
       /* .BigContain {
@@ -41,10 +43,10 @@
         text-align:center;
         color:#f1f126;
         font-size: 30px;
-        width: 1000px;
-        height: 600px;
+        width: 50%;
+        height: 80%;
         margin-left: 30%;
-        background: #484b6a;
+        background: #555a8b;
         border-radius: 15px;
         padding: 15px;
         box-shadow: 0 4px 15px rgba(0, 157, 255, 0.5);
@@ -56,7 +58,7 @@
         flex: 1;
         overflow-y: auto;
         padding: 15px;
-        background: #000000;
+        background: #717ec774;
         border-radius: 10px;
         color: #fff;
         font-size: 16px;
@@ -65,18 +67,24 @@
         display: flex;
         margin-top: 10px;
       }
+      .input-form {
+        display: flex;
+      }
       input {
         flex: 1;
         padding: 12px;
-        padding-right: 735px;
         border: 2px solid #fff;
         border-radius: 5px;
-        background: #000;
-        color: #fff;
+        background: #a3afff;
+        color: #000000;
         font-size: 16px;
       }
+      ::placeholder {
+        color: rgb(0, 0, 0);
+        opacity: 1; /* Firefox */
+      }
       button {
-        background: #fff;
+        background: #a3afff;
         color: #000;
         border: none;
         padding: 12px;
@@ -96,7 +104,7 @@
         display: inline-block;
         color: #dde1de;
         margin: 5px 0;
-        background-color: #1c1c1c;
+        background-color: #2d3a52;
         border-radius: 15px;
         padding: 10px;
         font-size: 20px;
@@ -118,14 +126,14 @@
     </style>
   </head>
   <body>
-    <!-- <div class="BigContain"> bleh-->
+    <!-- <div class="BigContain"> -->
       <!-- <div class="Ducky">Ducky!</div> -->
       <div class="chat-container">
-        ~~~~~~~~~~~~~~~~~~~~~~~~~ Ducky! ~~~~~~~~~~~~~~~~~~~~~~~~~
+        Ducky!
         <br>
         <div class="chat-box" id="chatBox"></div>
         <div class="input-container">
-          <form onsubmit="return false">
+          <form class="input-form" onsubmit="return false">
             <input type="text" id="userInput" placeholder="Type a message..." />
             <button type="submit" onclick="globalThis.sendMessage()">
               Send
